# rates_app

./: .env  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  fill_asset_table.py  manage.py  pyproject.toml
migrations/: env.py
migrations/versions/: 1199e8dfde99_delete_index_from_timestamp_in_rate_.py  14d89600402e_create_rate_and_asset_tables.py
rates_app/: celery.py  constants.py  settings.py  utils.py
rates_app/clients/: rates_clients.py  tasks.py
rates_app/clients_module/: rates_clients.py  tasks.py
rates_app/database/: engine.py  models.py  services.py
rates_app/database_module/: database_service.py
rates_app/websocket/: producer.py  server.py  websocket_types.py
rates_app/websocket_module/: server.py  websocket_types.py
